<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/searchMultiple"
        android:layout_width="fill_parent"
        android:layout_height="70dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#CCCCCC" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/searchMultipleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/searchMultiple"
                android:textColor="#333333"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/searchMultiple_sub"
                android:textColor="#666666"
                android:textSize="13sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/searchMultipleCB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/ipRange"
        android:layout_width="fill_parent"
        android:layout_height="70dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#CCCCCC" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true" >

            <TextView
                android:id="@+id/ip_txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ipRangeTxt"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="9dp"
                android:text="IP"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/ipRangeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/ipRange"
                android:textColor="#666666"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/ip_txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/ip_txt1"
                android:layout_toRightOf="@+id/ip_et1"
                android:layout_marginLeft="10dp"
                android:text="Port" />

            <EditText
                android:id="@+id/ip_et1"
                android:layout_width="145dp"
                android:layout_height="50dp"
                android:layout_below="@+id/ipRangeTxt"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/ip_txt1"
                android:ems="10"
                android:inputType="number"
                android:digits="0123456789."
                android:text="192.168.1.135" />
            
            <EditText
                android:id="@+id/ip_et2"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_below="@+id/ipRangeTxt"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/ip_txt2"
                android:ems="10"
                android:inputType="number"
                android:text="61616" />

        </RelativeLayout>

    </RelativeLayout>
    

    <RelativeLayout
        android:id="@+id/portRange"
        android:layout_width="fill_parent"
        android:layout_height="70dp" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#CCCCCC" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/portRangeTxt"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="9dp"
                android:text="From:"
                android:textColor="#666666"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/portRangeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/portRange"
                android:textColor="#666666"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textView1"
                android:layout_toRightOf="@+id/port_et1"
                android:layout_marginLeft="18dp"
                android:text="To:" />

            <EditText
                android:id="@+id/port_et1"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_below="@+id/portRangeTxt"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@+id/textView1"
                android:ems="10"
                android:inputType="number"
                android:text="61616" />
            
            <EditText
                android:id="@+id/port_et2"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_below="@+id/portRangeTxt"
                android:layout_marginLeft="18dp"
                android:layout_toRightOf="@+id/textView2"
                android:ems="10"
                android:inputType="number"
                android:text="61616" />

        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/scan_btn"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@drawable/button"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"
        android:text="Scan" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp" />

</LinearLayout>